--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>moving blocks</title>
+  <title>Moving Blocks Mono</title>
   <meta charset="utf-8">
   <script id="fxhash-snippet">
     //---- do not edit the following code (you can indent as you wish)
