--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>moving blocks</title>
+  <title>Driften</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Real-time deterministic webgl2 animation, variable size, 2022">
+  <meta name="twitter:creator" content="@d_rx">
+  <meta name="twitter:url" content="https://github.com/dirx/fxhash-creations#driften">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@d_rx">
+  <meta name="twitter:title" content="Driften">
+  <meta name="twitter:description" content="Real-time deterministic webgl2 animation, variable size, 2022">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/dirx/fxhash-creations/about/resources/driften/preview.jpg">
+  <meta property="og:image" content="preview.jpg">
   <script id="fxhash-snippet">
     //---- do not edit the following code (you can indent as you wish)
     let search = new URLSearchParams(window.location.search)
