--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
   <meta name="twitter:title" content="Driften">
   <meta name="twitter:description" content="Real-time deterministic webgl2 animation, variable size, 2022">
   <meta name="twitter:image" content="https://raw.githubusercontent.com/dirx/fxhash-creations/about/resources/driften/preview.jpg">
-  <meta property="og:image" content="preview.jpg">
+  <meta property="og:image" content="./preview.jpg">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <script id="fxhash-snippet">
     //---- do not edit the following code (you can indent as you wish)
     let search = new URLSearchParams(window.location.search)
