--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Driften</title>
+  <title>Fischbach</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Real-time deterministic webgl2 animation, variable size, 2022">
   <meta name="twitter:creator" content="@d_rx">
-  <meta name="twitter:url" content="https://github.com/dirx/fxhash-creations#driften">
+  <meta name="twitter:url" content="https://github.com/dirx/fxhash-creations#fischbach">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@d_rx">
-  <meta name="twitter:title" content="Driften">
+  <meta name="twitter:title" content="Fischbach">
   <meta name="twitter:description" content="Real-time deterministic webgl2 animation, variable size, 2022">
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/dirx/fxhash-creations/about/resources/driften/preview.jpg">
-  <meta property="og:image" content="preview.jpg">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/dirx/fxhash-creations/about/resources/fischbach/preview.jpg">
+  <meta property="og:image" content="./preview.jpg">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <script id="fxhash-snippet">
     //---- do not edit the following code (you can indent as you wish)
     let search = new URLSearchParams(window.location.search)
