--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Iacta</title>
+  <title>Est</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Real-time deterministic webgl2 animation, fixed size, 2022">
+  <meta name="description" content="Real-time deterministic webgl2 animation, fixed size, 2023">
   <meta name="twitter:creator" content="@d_rx">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@d_rx">
-  <meta name="twitter:title" content="Iacta">
-  <meta name="twitter:description" content="Real-time deterministic webgl2 animation, fixed size, 2022">
+  <meta name="twitter:title" content="Est">
+  <meta name="twitter:description" content="Real-time deterministic webgl2 animation, fixed size, 2023">
   <meta name="twitter:image" content="./preview.jpg">
-  <meta property="og:title" content="Iacta">
-  <meta property="og:description" content="Real-time deterministic webgl2 animation, fixed size, 2022">
+  <meta property="og:title" content="Est">
+  <meta property="og:description" content="Real-time deterministic webgl2 animation, fixed size, 2023">
   <meta property="og:image" content="./preview.jpg">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="author" href="https://dirx.dev">
   <link rel="author" href="https://twitter.com/d_rx">
   <link rel="author" href="https://genart.social/@dirx">
-  <link rel="alternate" href="https://github.com/dirx/fxhash-creations#iacta">
+  <link rel="alternate" href="https://github.com/dirx/fxhash-creations#est">
   <script id="fxhash-snippet">
     //---- do not edit the following code (you can indent as you wish)
     let search = new URLSearchParams(window.location.search)
